fix navbar overlapping main content

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 body {
+  padding-top: 70px;
   overflow-x: hidden;
   background-color: #F1F2F6;
   margin: 0;
